packages/llvm/src/tests/snapshots/llvm__tests__const _x = 1;             const x = ((_x)) - ((1 + 1)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca double, align 8
  store double 1.000000e+00, double* %_x, align 8
  %x = alloca double, align 8
  %"2" = load double, double* %_x, align 8
  %"1" = fsub double %"2", 2.000000e+00
  store double %"1", double* %x, align 8
  ret void
}

