packages/llvm/src/tests/snapshots/llvm__tests__const _x = 1; const x = +((_x)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca double, align 8
  store double 1.000000e+00, double* %_x, align 8
  %x = alloca double, align 8
  %"2" = load double, double* %_x, align 8
  store double %"2", double* %x, align 8
  ret void
}

