packages/llvm/src/tests/snapshots/llvm__tests__const _x = true; const x = !((_x)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca i64, align 8
  store i64 1, i64* %_x, align 4
  %x = alloca i64, align 8
  %"2" = load i64, i64* %_x, align 4
  %"1" = xor i64 %"2", 1
  store i64 %"1", i64* %x, align 4
  ret void
}

