packages/llvm/src/tests/snapshots/llvm__tests__const _y = 1;             const x = ((+1)) * ((_y)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_y = alloca double, align 8
  store double 1.000000e+00, double* %_y, align 8
  %x = alloca double, align 8
  %"4" = load double, double* %_y, align 8
  %"1" = fmul double 1.000000e+00, %"4"
  store double %"1", double* %x, align 8
  ret void
}

